--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"/>
+
 </head>
 <body>
     <nav>
@@ -17,7 +21,7 @@
             <h4>Design Process</h4>
             <h4>About Agency</h4>
         </div>
-        <button>Let's Talk </button>
+        <button>Let's Talk <span><svg fill="none" viewBox="0 0 20 20"><path fill="#fff" d="M2.5 14.375V17.5h3.125l9.217-9.217-3.125-3.125L2.5 14.375Zm14.758-8.508a.83.83 0 0 0 0-1.175l-1.95-1.95a.83.83 0 0 0-1.175 0l-1.525 1.525 3.125 3.125 1.525-1.525Z"></path></svg></span> </button>
         <div id="nav-bottom">
             <div class="bottom-content">
                 <h5><span>Case Studies</span></h5>
@@ -95,8 +99,40 @@
 
         </div>
 
-        
-        <div id="page2"></div>
+
+        <div id="page2">
+            <div id="page-2-left">
+                <p>Exclusive insights into <br>UI/UX and product design </p>
+                <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full display</h5>
+            </div>
+            <div id="page-2-right">
+                <div class="right-content">
+                    <h2>Effective Design Principles for <br>Cryptocurrency Trading Interfaces</h2>
+                    <img src="Assets/85a21d7a-8560-42e0-8886-3b9c44859f5c.webp" alt="">
+                </div>
+                <div class="right-content">
+                    <h2>How to design an AI interface users will trust in 2024?</h2>
+                    <img src="Assets/2.webp" alt="">
+                </div>
+                <div class="right-content">
+                    <h2>How AI Influences Design and the Reciprocal Impact of UX on AI-Driven Products</h2>
+                    <img src="Assets/3.webp" alt="">
+                </div>
+                <div class="right-content" style="border: none;">
+                    <h2>Lazarev becomes a Professional Webflow Partner</h2>
+                    <img src="Assets/4.webp" alt="">
+                </div>
+        </div>
+    </div>
+
+
+
+    <div id="page3">
+        <video src="Assets/la-reel--min.mp4"></video>
+        <div id="page3-center">
+            <div id="icon"><i class="ri-play-fill"></i></div>
+            <h5>Watch Showreel</h5>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
