--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="page1">
             <h1>AI & ML PR<span><svg class="c-bttn__morph" fill="none" viewBox="0 0 131 136"><path class="g-path" data-morph="end" fill="#fff" d="M48 77.457v7.224h7.224l21.307-21.306-7.224-7.225L48 77.457Zm34.118-19.67a1.919 1.919 0 0 0 0-2.716l-4.508-4.508a1.919 1.919 0 0 0-2.716 0l-3.526 3.526 7.224 7.224 3.526-3.525Z"></path><path class="g-path" data-morph="start" fill="#fff" d="M48 77.457v7.224h7.224l21.307-21.306-7.224-7.225L48 77.457Zm34.118-19.67a1.919 1.919 0 0 0 0-2.716l-4.508-4.508a1.919 1.919 0 0 0-2.716 0l-3.526 3.526 7.224 7.224 3.526-3.525Z" data-original="M65.72 109.14c10.08 0 17.76-3.78 23.04-11.34 5.4-7.68 8.1-17.64 8.1-29.88 0-12.24-2.7-22.2-8.1-29.88-5.28-7.68-12.96-11.52-23.04-11.52-9.96 0-17.7 3.84-23.22 11.52-5.4 7.68-8.1 17.64-8.1 29.88 0 12.12 2.7 22.02 8.1 29.7 5.52 7.68 13.26 11.52 23.22 11.52Zm46.08 7.02c-11.64 12.6-27.06 18.9-46.26 18.9s-34.62-6.3-46.26-18.9C7.76 103.56 2 87.48 2 67.92c0-19.56 5.76-35.64 17.28-48.24C30.92 7.08 46.34.78 65.54.78s34.62 6.3 46.26 18.9c11.64 12.6 17.46 28.68 17.46 48.24 0 19.56-5.82 35.64-17.46 48.24Z"></path></svg></span>DUCT</h1>
             <H1>DESIGN AGENCY</H1>
-            <p>We partner with AI & ML businesses, guiding them from series A <br>to series D and beyond with our expertise in  </p>
+            <p style="color: white;">We partner with AI & ML businesses, guiding them from series A <br>to series D and beyond with our expertise in  </p>
             <div id="page1-capsules">
                 <h4>Band Design</h4>
                 <h4>User Experience</h4>
@@ -98,8 +98,7 @@
             </div>
 
         </div>
-
-
+<!-- Page-2 -->
         <div id="page2">
             <div id="page-2-left">
                 <p>Exclusive insights into <br>UI/UX and product design </p>
@@ -124,9 +123,7 @@
                 </div>
         </div>
     </div>
-
-
-
+<!-- Page-3 -->
     <div id="page3">
         <video src="Assets/la-reel--min.mp4"></video>
         <div id="page3-center">
@@ -134,6 +131,107 @@
             <h5>Watch Showreel</h5>
         </div>
     </div>
+
+<!-- Page-4 -->
+<div id="page4">
+    <div id="page4-left">
+        <h1>Success Stories Shaped by Our User Experience Design Agency</h1>
+    </div>
+    <div id="page4-right">
+        <div id="p1">
+            <h4>Partnership Mentality</h4>
+            <p>Along with taking the lead in designing AI-powered solutions, we embody a partnership mentality. This exact commitment has been the bedrock of our clients’ successes.  When you choose to collaborate with us, we promise to be right where your audience's changing desires meet your ambitious business goals. We don't settle for mediocrity; we strive for excellence in every Figma pixel, every touchpoint, and every UX interaction.</p>
+        </div>
+        <div id="p2">
+            <h4>Results</h4>
+            <p>That is how we've built 50+ sustainable startup products and helped 400+ brands secure millions in funding, achieve successful acquisitions, and establish themselves as globally recognized companies.</p>
+        </div>
+    </div>
+</div>
+
+<!-- Page-5 -->
+<div id="page5">
+    <div id="upper">
+        <div class="card" id="card1">
+            <h1>$500M</h1>
+            <h5>In funding secured owning to our designs</h5>
+            <p>/001</p>
+        </div>
+        <div class="card" id="card2">
+            <h1>+1million</h1>
+            <h5>Increase in customer base</h5>
+            <p>/002</p>
+        </div>
+        <div class="card" id="card3">
+            <h1>1 000 000+</h1>
+            <h5>Of active market users</h5>
+            <p>/003</p>
+        </div>
+    </div>
+    <div id="lower">
+        <div class="card" id="card4">
+            <h1>25 million</h1>
+            <h5>Monthly E-commerce visits</h5>
+            <p>/004</p>
+        </div>
+        <div class="card" id="card5">
+            <h1>+300%</h1>
+            <h5>Increase in sign-up conversion rate</h5>
+            <p>/005</p>
+        </div>
+        <div class="card" id="card6">
+            <h1>+42%</h1>
+            <h5>Increase in the app's retention rate</h5>
+            <p>/006</p>
+        </div>
+    </div>
+</div>
+
+<!-- Page-6 -->
+
+<div id="page6">
+    <div id="section1" class="section">
+        <div id="sec1-left">
+            <h2>Pika AI</h2>
+            <p>Pika AI is a new and better search engine that harnesses AI technology and helps people find the most relevant and interesting information from across the web.</p>
+        </div>
+        <div id="sec1-right">
+            <img src="Assets/page6-img1" alt="">
+            <video src="Assets/pika-cover-big (3)"></video>
+        </div>
+    </div>
+    <div id="section1" class="section">
+        <div id="sec1-left">
+            <h2>NODO</h2>
+            <p>A promo website for unique cinematography equipment. Inertia Wheels MAX –– the first-hand wheels developed to streamline the operating experience.</p>
+        </div>
+        <div id="sec1-right">
+            <img src="Assets/nodo.webp" alt="">
+            <video src="Assets/nodo-cover-big.mp4"></video>
+        </div>
+    </div>
+</div>
+
+
+<div id="page7">
+    <button>Become A Client</button>
+    <div id="page7-right">
+        <p> <span>services</span> We lead your startup at every step of its  <span></span> growth, providing unparalleled personal service at every interaction. Whether it's launching an MVP, revamping an existing product, securing funding with UI prototypes, increasing customer engagement, or boosting conversions, we develop a suite of custom-tailored design services to fulfill your expectations.</p>
+        
+
+        <div id="page7-content">
+            <h1>UI/UX Design</h1>
+            <div id="flex"></div>
+            <h4>UI Audit</h4>
+            <h4>UI Design</h4>
+            <h4>UX Design</h4>
+            <h4>UX Research</h4>
+        </div>
+    </div>
+    
+</div>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
