--- a/index.html
+++ b/index.html
@@ -406,7 +406,20 @@
     </div>
 </div>
 
-<div id="page9"></div>
+<div id="page9">
+    <div id="p9-left">
+        <h4>Testamonials</h4>
+        <h1>Clients speak out: what they say about our AI design</h1>
+        <p>Even though the world of the decentralized web is a next-level experience, it has fundamental issues that hinder your project from growing. Having partnered with various Web3 startups, we developed key steps to address each with design.</p>
+        
+    </div>
+    <div id="p9-right">
+        <div id="p9-1">
+            <h5>/01</h5>
+            <p>“I had the pleasure of working with Maria and Lera backed by the amazing design team at Lazarev, and I cannot recommend them highly enough. From start to finish, they were excellent communicators and made the entire process incredibly smooth.</p>
+        </div>
+    </div>
+</div>
 
 </div>
 
